chore: remove /export/accounting route, money implementation
