# api/models.ts
@@ -2,237 +2,222 @@
 /* tslint:disable */
 /* eslint-disable */
 
-export type EmptyObject = { [key: string]: never }
-
-export type t_AccountingExportLine = {
-  clientAccount?: string
-  credit?: number | null
-  customerName?: string
-  date?: string
-  debit?: number | null
-  description?: string
-  generalAccount?: string
-  invoiceRef?: string
-}
+export type EmptyObject = { [key: string]: never };
 
 export type t_Admin = {
-  createdAt?: string
-  email?: string
-  firstName?: string
-  id?: string
-  isActive?: string
-  lastLogin?: string | null
-  lastName?: string
-  updatedAt?: string
-}
+    createdAt?: string;
+    email?: string;
+    firstName?: string;
+    id?: string;
+    isActive?: string;
+    lastLogin?: string | null;
+    lastName?: string;
+    updatedAt?: string;
+};
 
 export type t_AdminLoginResponse = {
-  admin?: t_Admin
-  token?: string
-}
+    admin?: t_Admin;
+    token?: string;
+};
 
 export type t_BaseAPIResponse = {
-  message?: string
-  success?: boolean
-}
+    message?: string;
+    success?: boolean;
+};
 
 export type t_DirectDebitOrder = {
-  amount?: number
-  executionDate?: string
-  id?: string
-  invoiceId?: string
-  paymentMethod?: t_PaymentMethodType
-  status?: "TO_SEND" | "SENT" | "EXECUTED" | "REJECTED"
-  userId?: string
-}
+    amount?: number;
+    executionDate?: string;
+    id?: string;
+    invoiceId?: string;
+    paymentMethod?: t_PaymentMethodType;
+    status?: 'TO_SEND' | 'SENT' | 'EXECUTED' | 'REJECTED';
+    userId?: string;
+};
 
 export type t_Invoice = {
-  amountExclVat?: number
-  amountInclVat?: number
-  billingDate?: string
-  id?: string
-  invoiceRef?: string
-  periodEnd?: string
-  periodStart?: string
-  status?: "PENDING" | "SENT" | "PAID" | "FAILED"
-  subscriptionId?: string
-  userId?: string
-  vatAmount?: number
-}
+    amountExclVat?: number;
+    amountInclVat?: number;
+    billingDate?: string;
+    id?: string;
+    invoiceRef?: string;
+    periodEnd?: string;
+    periodStart?: string;
+    status?: 'PENDING' | 'SENT' | 'PAID' | 'FAILED';
+    subscriptionId?: string;
+    userId?: string;
+    vatAmount?: number;
+};
 
 export type t_InvoiceDetailed = t_Invoice & {
-  subscription?: t_SubscriptionDetailed
-}
+    subscription?: t_SubscriptionDetailed;
+};
 
 export type t_LoginResponse = {
-  token?: string
-  user?: t_User
-}
+    token?: string;
+    user?: t_User;
+};
 
 export type t_PaymentMethod = {
-  cardLast4?: string
-  iban?: string
-  type?: t_PaymentMethodType
-}
+    cardLast4?: string;
+    iban?: string;
+    type?: t_PaymentMethodType;
+};
 
-export type t_PaymentMethodType = "SEPA" | "CARD"
+export type t_PaymentMethodType = 'SEPA' | 'CARD';
 
 export type t_PaymentUpdate = {
-  invoiceId: string
-  rejectionReason?: string | null
-  status: "EXECUTED" | "REJECTED"
-}
+    invoiceId: string;
+    rejectionReason?: string | null;
+    status: 'EXECUTED' | 'REJECTED';
+};
 
 export type t_Subscription = {
-  contractCode?: string
-  endDate?: string | null
-  id?: string
-  monthlyAmount?: number
-  promoCode?: string | null
-  startDate?: string
-  status?: t_SubscriptionStatus
-  userId?: string
-}
+    contractCode?: string;
+    endDate?: string | null;
+    id?: string;
+    monthlyAmount?: number;
+    promoCode?: string | null;
+    startDate?: string;
+    status?: t_SubscriptionStatus;
+    userId?: string;
+};
 
 export type t_SubscriptionDetailed = t_Subscription & {
-  user?: t_User
-}
+    user?: t_User;
+};
 
-export type t_SubscriptionStatus = "ACTIVE" | "CANCELLED" | "PENDING_CANCEL"
+export type t_SubscriptionStatus = 'ACTIVE' | 'CANCELLED' | 'PENDING_CANCEL';
 
 export type t_User = {
-  address?: string
-  city?: string
-  country?: string
-  createdAt?: string
-  dateOfBirth?: string | null
-  email?: string
-  firstName?: string
-  id?: string
-  lastName?: string
-  paymentMethod?: t_PaymentMethod
-  phone?: string
-  postalCode?: string
-  status?: t_UserStatus
-  updatedAt?: string
-}
+    address?: string;
+    city?: string;
+    country?: string;
+    createdAt?: string;
+    dateOfBirth?: string | null;
+    email?: string;
+    firstName?: string;
+    id?: string;
+    lastName?: string;
+    paymentMethod?: t_PaymentMethod;
+    phone?: string;
+    postalCode?: string;
+    status?: t_UserStatus;
+    updatedAt?: string;
+};
 
-export type t_UserStatus = "OK" | "SUSPENDED" | "BLOCKED" | "DELETED"
+export type t_UserStatus = 'OK' | 'SUSPENDED' | 'BLOCKED' | 'DELETED';
 
 export type t_AdminLoginRequestBodySchema = {
-  email: string
-  password: string
-}
+    email: string;
+    password: string;
+};
 
 export type t_CancelSubscriptionParamSchema = {
-  subscriptionId: string
-}
+    subscriptionId: string;
+};
 
 export type t_CreateSubscriptionRequestBodySchema = {
-  contractCode: string
-  monthlyAmount: number
-  promoCode?: string | null
-  startDate: string
-  userId: string
-}
+    contractCode: string;
+    monthlyAmount: number;
+    promoCode?: string | null;
+    startDate: string;
+    userId: string;
+};
 
 export type t_CreateUserRequestBodySchema = {
-  address: string
-  city: string
-  country: string
-  dateOfBirth?: string | null
-  email: string
-  firstName: string
-  lastName: string
-  password: string
-  paymentMethod?: t_PaymentMethod
-  phone: string
-  postalCode: string
-}
+    address: string;
+    city: string;
+    country: string;
+    dateOfBirth?: string | null;
+    email: string;
+    firstName: string;
+    lastName: string;
+    password: string;
+    paymentMethod?: t_PaymentMethod;
+    phone: string;
+    postalCode: string;
+};
 
 export type t_DeleteUserParamSchema = {
-  userId: string
-}
+    userId: string;
+};
 
 export type t_ExportDirectDebitsQuerySchema = {
-  executionDate: string
-}
-
-export type t_ExportMonthlyInvoicesQuerySchema = {
-  billingMonth: string
-}
+    executionDate: string;
+};
 
 export type t_GenerateMonthlyBillingRequestBodySchema = {
-  billingDate?: string
-}
+    billingDate?: string;
+};
 
 export type t_GetMonthlyRevenueQuerySchema = {
-  from?: string
-  to?: string
-}
+    from?: string;
+    to?: string;
+};
 
 export type t_GetSubscriptionParamSchema = {
-  subscriptionId: string
-}
+    subscriptionId: string;
+};
 
 export type t_GetUserParamSchema = {
-  userId: string
-}
+    userId: string;
+};
 
 export type t_ListInvoicesQuerySchema = {
-  status?: "PENDING" | "SENT" | "PAID" | "FAILED"
-  subscriptionId?: string
-  userId?: string
-}
+    status?: 'PENDING' | 'SENT' | 'PAID' | 'FAILED';
+    subscriptionId?: string;
+    userId?: string;
+};
 
 export type t_ListSubscriptionsQuerySchema = {
-  status?: t_SubscriptionStatus
-  userId?: string
-}
+    status?: t_SubscriptionStatus;
+    userId?: string;
+};
 
 export type t_ListUsersQuerySchema = {
-  status?: t_UserStatus
-}
+    status?: t_UserStatus;
+};
 
 export type t_LoginRequestBodySchema = {
-  email: string
-  password: string
-}
+    email: string;
+    password: string;
+};
 
-export type t_UpdatePaymentStatusRequestBodySchema = t_PaymentUpdate[]
+export type t_UpdatePaymentStatusRequestBodySchema = t_PaymentUpdate[];
 
 export type t_UpdateSubscriptionParamSchema = {
-  subscriptionId: string
-}
+    subscriptionId: string;
+};
 
 export type t_UpdateSubscriptionRequestBodySchema = {
-  endDate?: string | null
-  monthlyAmount?: number
-  promoCode?: string | null
-  status?: t_SubscriptionStatus
-}
+    endDate?: string | null;
+    monthlyAmount?: number;
+    promoCode?: string | null;
+    status?: t_SubscriptionStatus;
+};
 
 export type t_UpdateUserParamSchema = {
-  userId: string
-}
+    userId: string;
+};
 
 export type t_UpdateUserRequestBodySchema = {
-  address?: string
-  city?: string
-  country?: string
-  dateOfBirth?: string | null
-  email?: string
-  firstName?: string
-  lastName?: string
-  paymentMethod?: t_PaymentMethod
-  phone?: string
-  postalCode?: string
-}
+    address?: string;
+    city?: string;
+    country?: string;
+    dateOfBirth?: string | null;
+    email?: string;
+    firstName?: string;
+    lastName?: string;
+    paymentMethod?: t_PaymentMethod;
+    phone?: string;
+    postalCode?: string;
+};
 
 export type t_UpdateUserStatusParamSchema = {
-  userId: string
-}
+    userId: string;
+};
 
 export type t_UpdateUserStatusRequestBodySchema = {
-  status?: t_UserStatus
-}
+    status?: t_UserStatus;
+};
